<resources>
    <string name="app_name">Photos</string>
    <string name="apb1_name">Album_Delete_Button</string>
    <string name="apb2_name">Album_Rename_Button</string>
    <string name="apb3_name">Album_AddNew_Button</string>
    <string name="apb4_name">Photo_CtrlXC_Button</string>
    <string name="apb5_name">Pages_Return_Button</string>
    <string name="apb6_name">Photo_Search_Button</string>
    <string name="apb7_name">Slide_Parade_Button</string>
    <string name="aps1_name">Photos13 Manager</string>
    <string name="dpb1_name">Display_Page_toPrevious</string>
    <string name="dpb2_name">Display_Page_toNext</string>
    <string name="delete_mode">Delete an Album</string>
    <string name="rename_mode">Rename an Album</string>
    <string name="message_window">Message Window with Input</string>
    <string name="delete_photo">Delete a Photo</string>
    <string name="CtrlXC_photo">Copy/Move a Photo</string>
    <string name="Mwb1">Ok</string>
    <string name="Mw_input_album">Please type in name of the Album\nyou want to create.</string>
    <string name="Mw_rename_album">Please type in name you want\nto rename the Album.</string>
    <string name="Mw_add_tag">Please type in the tag value\n you want to add.</string>
    <string name="Slide_photo">Slide Show Photo</string>
    <string name="Sw_input_slide">Please choose the slideshow direction\nyou want to been through this album.</string>
    <string name="Sw_slide_false">Backwards</string>
    <string name="Sw_slide_true">Forwards</string>
    <string name="display_delete">Delete a Tag</string>
    <string name="Sw_input_tagtype">Please choose the tag name/type\nyou want to add.</string>
    <string name="Sw_tagtype_false">person</string>
    <string name="Sw_tagtype_true">location</string>
    <string name="Sw_input_CtrlXC">Please choose the operation\nyou want to proceed.</string>
    <string name="Sw_CtrlXC_false">Copy</string>
    <string name="Sw_CtrlXC_true">Move</string>
    <string name="CtrlXC_AlbumList">Please choose the album\nyou want to copy/move to.</string>
    <string name="Sw_searchtype">Please choose the search type\nyou want to use.</string>
    <string name="Sw_search_false">Single Pair</string>
    <string name="Sw_search_true">Double Pair</string>
    <string name="Sw_input_tagtype_search">Please choose the tag name/type\nyou want to use in search.</string>
    <string name="Sw_input_tagvalue_search">Please type in the tag value\n you want to use for search.</string>
    <string name="Sw_input_combination_type">Please choose the combination\ntype you want to use in search.</string>
    <string name="Sw_combine_false">AND</string>
    <string name="Sw_combine_true">OR</string>
    <string name="search_results">Search Results</string>
</resources>